src/objects/Metadata_Audit_Job_Log__c.object
<CustomObject>
    <fields>
        <fullName>Execution_Log__c</fullName>
        <label>Execution Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Items_created__c</fullName>
        <label>Items created</label>
        <summarizedField>Metadata_Audit_Run_Log__c.Items_added__c</summarizedField>
        <summaryForeignKey>Metadata_Audit_Run_Log__c.Metadata_Audit_Job_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Items_deleted__c</fullName>
        <label>Items deleted</label>
        <summarizedField>Metadata_Audit_Run_Log__c.Items_deleted__c</summarizedField>
        <summaryForeignKey>Metadata_Audit_Run_Log__c.Metadata_Audit_Job_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Items_modified__c</fullName>
        <label>Items modified</label>
        <summarizedField>Metadata_Audit_Run_Log__c.Items_modified__c</summarizedField>
        <summaryForeignKey>Metadata_Audit_Run_Log__c.Metadata_Audit_Job_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Metadata_types_interrogated__c</fullName>
        <label>Metadata types interrogated</label>
        <summaryForeignKey>Metadata_Audit_Run_Log__c.Metadata_Audit_Job_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_fetch_errors__c</fullName>
        <label>Number of fetch errors</label>
        <summaryFilterItems>
            <field>Metadata_Audit_Run_Log__c.Error_returned__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Metadata_Audit_Run_Log__c.Metadata_Audit_Job_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_items__c</fullName>
        <label>Total items</label>
        <summarizedField>Metadata_Audit_Run_Log__c.Number_of_query_items_returned__c</summarizedField>
        <summaryForeignKey>Metadata_Audit_Run_Log__c.Metadata_Audit_Job_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Metadata Audit Job Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Items_created__c</columns>
        <columns>Items_deleted__c</columns>
        <columns>Items_modified__c</columns>
        <columns>Total_items__c</columns>
        <columns>Metadata_types_interrogated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_with_changes</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Items_created__c</columns>
        <columns>Items_deleted__c</columns>
        <columns>Items_modified__c</columns>
        <columns>Total_items__c</columns>
        <columns>Metadata_types_interrogated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Items_created__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Items_deleted__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Items_modified__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>All with changes</label>
    </listViews>
    <nameField>
        <displayFormat>JL-{0000000}</displayFormat>
        <label>Job Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>